# llm-quant

./: CLAUDE.md  README.md  benchmark.toml  data-contract.yaml  e91c7cf3.yaml  exit_adapter.py  hypothesis.yaml  llm-quant-eod-flat.service  mandate.yaml  paper-trading.yaml  phase6_runtime_audit_report.md  pyproject.toml  research-spec.yaml  robustness.yaml  test_rth_guard.py  tmp_broker_table_counts.py  walk-forward.yaml
.claude/commands/: evaluate.md  promote.md  trade.md
.github/workflows/: quality.yml
artifacts/: code_audit_profit_taking_validation_2026-04-01.md  exit_taxonomy_normalization_plan.md  gld-hit-rate-proof-plan.md  oco_order_flow_audit_report.md  spy-regime-starter-v1-promotion-checklist.md  spy-regime-starter-v1-robustness-execution-runbook.md  spy-regime-starter-v1-robustness-matrix.md  spy-regime-starter-v1-walk-forward-validation-checklist.md
config/: default.toml  governance.toml  risk.toml  universe.toml
config/prompts/: crypto_append.md  trader_decision.md  trader_overlay_decision.md  trader_overlay_system.md  trader_system.md
config/strategies/: btc-regime-alt-momentum-eod.toml  btc-regime-alt-momentum-paper.toml  catalog.toml  commodities.toml  crypto-ethbtc-paper.toml  crypto.toml  nearclose-broker-smoke.toml  stock-bounded-paper.toml
docs/governance/: alpha-hunting-framework.md  control-matrix.md  crypto-paper-promotion-checklist.md  crypto-strategy-promotion.md  decision-telemetry.md  eod-profit-taking.md  gld-slv-mean-reversion-v4-promotion-scorecard.md  gld-slv-paper-promotion-checklist.md  hybrid-intraday-runtime.md  lifecycle-gap-audit-2026-03-30.md  model-promotion-policy.md  no-signal-runtime-runbook.md  quant-lifecycle.md  research-tracks.md  runtime-truth-table.md  soxx-qqq-lead-lag-governance-decision-2026-04-01.md  soxx-qqq-lead-lag-successor-spec-v2-proposal-2026-04-01.md  soxx-qqq-lead-lag-v3-research-note-2026-04-01.md  spy-deterministic-strategy-governance-summary.md  strategy-artifact-status-matrix.md  strategy-promotion-execution-plan.md  strategy-promotion-gap-closure-plan.md  strategy-thorough-testing-plan.md  track-a-deployment-plan-2026-03-30.md  track-c-mandate-audit-2026-03-30.md  track-d-rebalancing.md  universe-expansion-plan.md  validation-requirements-matrix.md
docs/grafana/: llm-quant-dashboard.json
docs/research/: 2026-04-hunt-family4-family7.md  kalshi-arb-scan-2026-03-30.md  library-evaluations-2026-03-30.md  quant-refs-index.md  reference-repo-findings-2026-03-30.md  track-d-review-2026-03-30.md
docs/reviews/: arb-module-review-2026-03-30.md
notes/: crypto-family7-contrarian-redesign-2026-04-16.md  nearclose_broker_smoke_runbook.md  phase5a_runtime_field_mapping.md  robustness_review_spy_regime_starter_v1.txt  runner_logic_audit.md  stock_bounded_paper_runbook.md  xbi-ibb-family8-evaluation-2026-04-16.md
reports/: README.md  anti-curve-fit-audit.md  broker_test_coverage_audit.md  btc-momentum-v2-audit-redesign-plan-2026-04-16.md  btc-weekend-qqq-monday-branch-plan-2026-04-16.md  crypto-family2-mean-reversion-shortlist-2026-04-16.md  docs-governance-audit-summary.md  ledger_lineage_review_summary.md  operational-proof-plan-2026-04-14.md  profit-taking-behavior-review.md  research-doc-review-summary-2026-03-31.md  soxx_qqq_execution_path_audit.md  subagent_gld_structural_successor_shape_recommendation_2026-04-16.md  subagent_goldsilver_audit.txt  subagent_goldsilver_existing_files_created_note.txt  wfo_candidate_audit_2026-04-01.md
reports/daily/: 2026-04-14-btc-eem-lead-lag-test-note.md  2026-04-15-fresh-broad-scan-85-instruments-governance-plan.md  db_report_2026-03-30.md
scripts/: check  check_alpaca.py  check_catalog_governance.py  compute_correlation_matrix.py  compute_hrp_weights.py  execute_decision.py  generate_report.py  generate_tearsheet.py  portfolio_optimizer.py  research_script_design_summary.txt  run_a7_robustness.py  run_backtest.py  run_btc_momentum_v2_robustness.py  run_btc_weekend_followthrough_study.py  run_crypto_robustness.py  run_d7_stacked_credit.py  run_dashboard_api.sh  run_fraud_detectors.py  run_lqd_tqqq_weight_variants.py  run_spy_regime_starter_v1_robustness.py  run_tlt_tqqq_sprint_robustness.py  run_tsmom_backtest.py  run_tsmom_v2_backtest.py  run_walk_forward_non_ml.py  test  test_mcp_client.py  update_crypto_paper_eval.py  validate_crypto_promotion.py
scripts/local_mcp/: README.md  local_mcp_server.py
scripts/systemd/: llm-quant-commodities.service  llm-quant-commodities.timer  llm-quant-crypto-ethbtc-paper.service  llm-quant-crypto-ethbtc-paper.timer  llm-quant-crypto.service  llm-quant-crypto.timer  llm-quant-dashboard.service  llm-quant-eod-flat-stock-bounded-paper.service  llm-quant-eod-flat-stock-bounded-paper.timer  llm-quant-eod-flat.service  llm-quant-eod-flat.timer  llm-quant-intraday.service  llm-quant-intraday.timer  llm-quant-stock-bounded-paper.service  llm-quant-stock-bounded-paper.timer  run_stock_bounded_paper_if_trading_day.py
src/llm_quant/: cli.py  config.py
tests/: test_alpaca_client.py  test_cli_operational_controls.py  test_crypto_orders.py  test_execute_decision.py  test_funding_rates.py  test_overlay_engine.py  test_portfolio_optimizer.py  test_strategies_catalog.py  test_strategies_rotation.py  test_strategies_runtime.py
tests/test_backtest/: test_artifacts.py  test_engine.py  test_lead_lag_strategy.py  test_robustness.py  test_spy_regime_starter_strategy.py  test_vix_regime_strategy.py  test_walk_forward_runner.py
tests/test_brain/: test_decision_type.py  test_overlay_governor.py  test_parser.py
tests/test_broker/: test_crypto_orders.py  test_event_ledger.py  test_executor_submission_tracking.py  test_reconciliation.py  (+7 more)
tmp/: check_qqq_weekdays.py  freeze_gld_hit_rate_specs.py  freeze_gld_v1_spec.py  freeze_gld_v2_spec.py  freeze_gld_v6_v8_specs.py  freeze_xli_spec.py  freeze_xli_v2_spec.py  freeze_xli_v3_spec.py  freeze_xli_v4_spec.py  hash_xli_spec.py  ibb-xlp-mean-reversion-evaluation.txt  parameter_failure_review_summary.txt  run_btc_weekend_qqq_event_clean.py  run_btc_weekend_qqq_monday_risk_signal.py  xbi_ibb_cheap_screen.py
(+139 files in other folders)
