[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-quant"
version = "0.1.0"
description = "LLM-powered paper trading system where Claude acts as portfolio manager"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "45ck" }]
keywords = ["llm", "quant", "paper-trading", "claude", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "anthropic>=0.39.0",
    "duckdb>=1.1.0",
    "polars>=1.0.0",
    "yfinance>=0.2.40",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.9.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "jinja2>=3.1.0",
    "scipy>=1.12.0",
    "pyyaml>=6.0.0",
    "numpy>=1.26.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
api = [
    "fastapi>=0.110.0",
    "uvicorn>=0.23.0",
]
dashboard = [
    "streamlit>=1.38.0",
    "plotly>=5.24.0",
]

[project.scripts]
pq = "llm_quant.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_quant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

# ── noslop quality gates ──────────────────────────────────────────────

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",      # docstring rules — enable when the project matures
  "ANN",    # type annotation rules — use mypy for this
  "COM812", # trailing comma (conflicts with formatter)
  "ISC001", # implicit string concat (conflicts with formatter)
  "S101",   # assert — used intentionally in production for invariants
  "PLC0415",# deferred imports — CLI pattern to speed up startup
  "PLR2004",# magic values — acceptable in financial domain (percentages, thresholds)
  "RUF001", # ambiguous unicode — false positives on currency symbols
  "RUF002", # ambiguous unicode in docstrings
  "RUF003", # ambiguous unicode in comments
  "EM102",  # f-string in exception — readability over stack traces
  "TRY003", # raise vanilla args — over-abstraction for a small codebase
  "S608",   # SQL injection — false positive on parameterized queries with placeholders
  "FBT001", # boolean positional args — acceptable for simple flags
  "FBT003", # boolean positional value in call
  "S311",   # non-crypto random — used for non-security purposes
  "TC001",  # typing-only imports — adds complexity for little benefit here
  "TC002",  # typing-only third-party imports
  "TC003",  # typing-only stdlib imports
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",    # asserts are the whole point of tests
  "PLR2004", # magic values in test assertions are fine
  "PT018",   # composite assertions — acceptable in tests
  "PLR0913", # test helpers may have many args for flexibility
  "ARG002",  # test stubs may not use all ABC args
  "SLF001",  # tests need to access private members
  "ERA001",  # section dividers in test files are useful
  "PLR0133", # constant comparisons in tests are intentional assertions
  "PLC0206", # dict iteration patterns fine in tests
  "PERF401", # performance not critical in tests
]
"scripts/**/*.py" = [
  "INP001",  # scripts are standalone, not packages
  "T201",    # scripts use print() for user-facing output
  "E501",    # analysis scripts allow long lines for readability
  "BLE001",  # broad exception catching fine in analysis scripts
  "PTH123",  # open() fine in scripts
  "PLR0913", # analysis scripts may have many CLI args
  "C901",    # walk-forward loops are inherently complex
  "ARG001",  # scripts may have unused args for interface consistency
  "ARG002",  # inline classes may not use all ABC args
  "RUF059",  # unused unpacked vars fine in scripts
  "FBT002",  # boolean defaults fine in script helpers
]
"src/llm_quant/arb/**/*.py" = [
  "BLE001",  # broad exception catching is intentional in API parsing code
  "FBT002",  # boolean defaults fine in API client config methods
  "PLR0913", # data ingestion functions may have many parameters
  "TRY401",  # logger.exception with exc arg fine in error handlers
  "T201",    # print_report() is an intentional display utility — print() is correct
]
"src/llm_quant/backtest/engine.py" = [
  "PLR0913", # engine.run() needs many params by design
  "PLR0912", # backtest loop has many branches by nature
  "C901",    # backtest loop is inherently complex
  "PLR0915", # backtest loop has many statements
]
"src/llm_quant/backtest/strategies.py" = [
  "PLR0912", # regime strategy has many conditional branches
  "C901",    # regime strategy is inherently complex
  "ARG002",  # ABC contract requires all params even if unused
]
"src/llm_quant/backtest/strategy.py" = [
  "ARG002",  # reference impl may not use all ABC params
]
"src/llm_quant/backtest/robustness.py" = [
  "N806",    # T, N, S are standard mathematical notation (PBO/CPCV)
  "PLR0913", # run_robustness_gate needs all gate inputs
]
"src/llm_quant/backtest/metrics.py" = [
  "FBT002",  # annualize=True is a clear named boolean
]
"src/llm_quant/db/integrity.py" = [
  "PLR0913", # compute_trade_hash needs all trade fields for hash input
]
"src/llm_quant/risk/manager.py" = [
  "PLR0913", # filter_signals and check_trade need many required params by design
  "PLR0915", # check_trade has many guard statements for comprehensive risk coverage
]
"src/llm_quant/trading/exits.py" = [
  "PLR0913", # exit evaluation functions need all position/policy/state params
  "PLR0912", # evaluate_broker_exit_status has many status checks by design
]
"src/llm_quant/trading/intraday.py" = [
  "PLR0913", # generate_profit_taking_signals needs all position/portfolio params
]
"src/llm_quant/trading/ledger.py" = [
  "PLR0913", # log_trades and log_broker_fills need all trade fields
  "PLR0912", # log_broker_fills has many fill-type branches by design
  "PLR0915", # log_broker_fills has many statements for comprehensive field mapping
  "C901",    # log_broker_fills is inherently complex for fill normalization
  "PLR0911", # _normalize_broker_fill_semantic_action has many action types
]
"src/llm_quant/trading/portfolio.py" = [
  "PLR0913", # apply_broker_fill needs all fill fields for position management
  "PLR0912", # apply_broker_fill has many fill-type branches by design
  "PLR0915", # apply_broker_fill has many statements for position state transitions
  "C901",    # apply_broker_fill is inherently complex for broker fill semantics
  "PLR0911", # apply_broker_fill has many early-return error paths
]
"tests/test_broker/**/*.py" = [
  "FBT002",  # test client stubs mirror broker API signature with boolean defaults
  "EM101",   # test exception messages are inline for readability
  "E501",    # long method signatures in test stubs are acceptable
  "INP001",  # test directories without __init__.py are intentional
  "RET501",  # explicit return None in test stubs aids readability
  "RET504",  # intermediate assignment in stubs mirrors broker interface pattern
  "PLR1711", # useless return in test stubs mirrors broker interface
]
"tests/test_reporting/**/*.py" = [
  "DTZ001",  # test datetimes without timezone are intentional for test simplicity
  "E501",    # SQL insert statements in tests allow long lines for clarity
  "INP001",  # test directories without __init__.py are intentional
]
  "tests/test_trading/**/*.py" = [
    "E501",    # long constructor calls in test fixtures are acceptable
    "EM101",   # test assertion messages are inline for readability
  ]

[tool.ruff.lint.mccabe]
max-complexity = 13

[tool.ruff.lint.pylint]
max-args = 6
max-branches = 15
max-statements = 65
max-returns = 6
max-bool-expr = 4

[tool.mypy]
strict = true
ignore_missing_imports = true
